GitHub/Yakub-DevOps-Journey-2/kubernetes/db-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  replicas: 1
  selector:
    matchLabels: { app: vprodb }
  template:
    metadata:
      labels: { app: vprodb }
    spec:
      containers:
        - name: vprodb
          image: mysql:8.0
          ports: [{ containerPort: 3306 }]
          volumeMounts:
            - name: vprodb-data
              mountPath: /var/lib/mysql
      volumes:
        - name: vprodb-data
          persistentVolumeClaim:
            claimName: vprodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: vprodb
spec:
  selector: { app: vprodb }
  ports: [{ port: 3306, targetPort: 3306 }]
