GitHub/Yakub-DevOps-Journey-2/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: vprofile.local     # add to /etc/hosts for Minikube, or use a real DNS name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproweb
                port: { number: 80 }
